    Damien Doligez)

- #7672, #1492: Add `Filename.quote_command` to produce properly-quoted
  commands for execution by Sys.command.
  (Xavier Leroy, review by David Allsopp and Damien Doligez)

- #8716: Optimize [Array.fill] and [Hashtbl.clear] with a new runtime primitive
  (Alain Frisch, review by David Allsopp, Stephen Dolan and Damien Doligez)

- #8530: List.sort: avoid duplicate work by chop
  (Guillaume Munch-Maccagnoni, review by David Allsopp, Damien Doligez and
   Gabriel Scherer)

### Other libraries:

- #1939, #2023: Implement Unix.truncate and Unix.ftruncate on Windows.
  (Florent Monnier and Nicolás Ojeda Bär, review by David Allsopp)

### Manual and documentation:

- #8950: manual, move local opens in pattern out of the extension chapter
  (Florian Angeletti, review and suggestion by Gabriel Scherer)


### Compiler user-interface and warnings:

- #8833: Hint for (type) redefinitions in toplevel session
  (Florian Angeletti, review by Gabriel Scherer)

- #2127: Refactor lookup functions
  Included observable changes:
    - makes the location of usage warnings and alerts for constructors more
      precise
    - don't warn about a constructor never being used to build values when it
      has been defined as private
  (Leo White, review by Thomas Refis)

- #8885: Warn about unused local modules
  (Thomas Refis, review by Alain Frisch)

- #8872: Add ocamlc option "-output-complete-exe" to build a self-contained
  binary for bytecode programs, containing the runtime and C stubs.
  (Stéphane Glondu, Nicolás Ojeda Bär, review by Jérémie Dimino and Daniel
  Bünzli)

### Build system:

- #8650: ensure that "make" variables are defined before use;
  revise generation of config/util.ml to better quote special characters
  (Xavier Leroy, review by David Allsopp)

- #8690, #8696: avoid rebuilding the world when files containing primitives
  change.
  (Stephen Dolan, review by Gabriel Scherer, Sébastien Hinderer and
   Thomas Refis)
